--- a/src/app/shared/components/quizzes-list/quizzes-list.component.html
+++ b/src/app/shared/components/quizzes-list/quizzes-list.component.html
@@ -13,7 +13,7 @@
 
 
 <div class="d-flex flex-wrap justify-content-between gap-3 mt-4">
-  <div *ngFor="let skill of skillslist" class="quiz-card">
-    <app-quiz-card [skill]="skill"></app-quiz-card>
+  <div *ngFor="let Quiz of QuizzesList" class="quiz-card">
+    <app-quiz-card [Quiz]="Quiz"></app-quiz-card>
   </div>
 </div>
