--- a/src/app/shared/components/quiz-card/quiz-card.component.html
+++ b/src/app/shared/components/quiz-card/quiz-card.component.html
@@ -1,11 +1,11 @@
 <div class="quiz-card">
   <div class="card-content">
-    <h5 class="skill-name">{{ skill.Name }}</h5>
+    <h5 class="skill-name">{{ Quiz.QuizName }}</h5>
     <!-- <small class="skill-description text-muted">{{ skill.description }}</small> -->
   </div>
 
   <div class="card-actions">
-    <button class="btn btn-outline-primary" [routerLink]="['/Quiz', skill.Id]">Quiz Details</button>
+    <button class="btn btn-outline-primary" [routerLink]="['/Quiz', Quiz.QuizId]">Quiz Details</button>
   </div>
 </div>
 
