--- a/src/app/shared/components/reset-password/reset-password.component.css
+++ b/src/app/shared/components/reset-password/reset-password.component.css
@@ -1,9 +1,9 @@
-.forgot-password-container {
+.reset-password-container {
   display: flex;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background-color: #f5f7fa;
+  background-color: #f7f9fc;
   padding: 20px;
 }
 
@@ -12,12 +12,12 @@
   width: 100%;
   background-color: #ffffff;
   border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.1);
   padding: 30px;
 }
 
 .card-title {
-  font-size: 1.5em;
+  font-size: 1.6em;
   font-weight: bold;
   margin-bottom: 20px;
   text-align: center;
@@ -42,6 +42,8 @@
 
 small {
   color: #d9534f;
+  display: block;
+  margin-top: 5px;
 }
 
 .btn {
@@ -55,15 +57,15 @@ small {
   color: #ffffff;
   cursor: pointer;
 }
+
+.btn:disabled {
+  background-color: #cccccc;
+  cursor: not-allowed;
+}
 .card-image {
   display: flex;
   justify-content: center; /* Center horizontally */
   align-items: center; /* Center vertically (if needed) */
   width: 50%;
   margin: 0 auto; /* Center the container itself within its parent */
-}
-
-.btn:disabled {
-  background-color: #cccccc;
-  cursor: not-allowed;
 }
