--- a/src/app/modules/hr/Components/hrlayout/hrlayout.component.html
+++ b/src/app/modules/hr/Components/hrlayout/hrlayout.component.html
@@ -3,7 +3,7 @@
 
     <!-- Sidebar (visible on larger screens and tablets) -->
     <div class="col-lg-3  col-xl-2  col-md-4 d-none d-md-block">
-      <app-sidebarlayout></app-sidebarlayout> <!-- Sidebar remains for larger screens and tablets -->
+      <app-hrsidebarlayout></app-hrsidebarlayout> <!-- Sidebar remains for larger screens and tablets -->
     </div>
 
     <!-- Mobile Navbar (visible on smaller screens, including tablets in collapse mode) -->
