--- a/src/app/modules/admin/analytics/analytics.component.html
+++ b/src/app/modules/admin/analytics/analytics.component.html
@@ -1,26 +1,6 @@
-<app-adminsidebar></app-adminsidebar>
-
-
-<div class="content">
-    <div class="container">
-
-        <div class="row">
-            <div class="col-md-6">
-                <div class="card mb-4">
-                    <div class="card-header">Card 1</div>
-                    <div class="card-body">
-                        <p>Content for card 1.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="card mb-4">
-                    <div class="card-header">Card 2</div>
-                    <div class="card-body">
-                        <p>Content for card 2.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+<div class="dashboard-container mt-5 d-flex flex-row justify-content-between">
+  <div class="dashboard-card" *ngFor="let card of cards">
+    <div class="card-header">{{ card.title }}</div>
+    <div class="card-body">{{ card.count | number }}</div>
+  </div>
 </div>
