--- a/src/app/modules/admin/reviews/reviews.component.html
+++ b/src/app/modules/admin/reviews/reviews.component.html
@@ -1,5 +1,5 @@
 <!-- src/app/admin/review-table/review-table.component.html -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
+<!-- <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&display=swap" rel="stylesheet">
 <div class="review-table-container">
@@ -18,7 +18,7 @@
           <td>{{ review.DeveloperFirstName }} {{ review.DeveloperLastName }}</td>
           <td>{{ review.MentorFirstName }} {{ review.MentorLastName }}</td>
           <td>
-            <!-- Display stars for rating -->
+          
             <span *ngFor="let star of [].constructor(review.Rating)">&#9733;</span>
             <span *ngFor="let empty of [].constructor(5 - review.Rating)">&#9734;</span>
           </td>
@@ -27,4 +27,159 @@
       </tbody>
     </table>
   </div>
+   -->
+
+   <div class="review-table-container">
+    <h2 class="display-4 fw-bold text-center " style="font-family: Edu AU VIC WA NT Hand, cursive;font-optical-sizing: auto;font-style: normal;">Reviews</h2>
   
+    <div class="mt-4 filter-container row justify-content-between" >
+      <div class="col-md-4 mb-3">
+      <input class="form-control" type="text" placeholder="Developer Name" [(ngModel)]="developerFilter" (ngModelChange)="applyFilter()" (keyup.enter)="applyFilter()" />
+    </div>
+    <div class="col-md-4 mb-3">
+      <input class="form-control" type="text" placeholder="Mentor Name" [(ngModel)]="mentorFilter" (ngModelChange)="applyFilter()" (keyup.enter)="applyFilter()" />
+    </div>
+   
+      <div class="rate-filter mb-3 star-rating col-md-4 mb-3"  #starRatingContainer>
+        
+        
+        <div class="rate-filter mb-3 star-rating  ">
+          <input type="radio" name="rate" id="rate5" value="5" [(ngModel)]="ratingFilter"  (change)="applyFilter()"
+          (keyup.enter)="applyFilter()" >
+          <label for="rate5">
+            <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="white" class="bi bi-star-fill"
+              viewBox="0 0 16 16">
+              <path
+                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+            </svg>
+          </label>
+
+          <input type="radio" name="rate" id="rate4" value="4" [(ngModel)]="ratingFilter"  (change)="applyFilter()"
+          (keyup.enter)="applyFilter()" >
+          <label for="rate4">
+            <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="white" class="bi bi-star-fill"
+              viewBox="0 0 16 16">
+              <path
+                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+            </svg>
+          </label>
+
+          <input type="radio" name="rate" id="rate3" value="3" [(ngModel)]="ratingFilter"  (change)="applyFilter()"
+          (keyup.enter)="applyFilter()">
+          <label for="rate3">
+            <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="white" class="bi bi-star-fill"
+              viewBox="0 0 16 16">
+              <path
+                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+            </svg>
+          </label>
+
+          <input type="radio" name="rate" id="rate2" value="2" [(ngModel)]="ratingFilter"  (change)="applyFilter()"
+          (keyup.enter)="applyFilter()" >
+          <label for="rate2">
+            <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="white" class="bi bi-star-fill"
+              viewBox="0 0 16 16">
+              <path
+                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+            </svg>
+          </label>
+
+          <input type="radio" name="rate" id="rate1" value="1" [(ngModel)]="ratingFilter"  (change)="applyFilter()"
+          (keyup.enter)="applyFilter()">
+          <label for="rate1">
+            <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="white" class="bi bi-star-fill"
+              viewBox="0 0 16 16">
+              <path
+                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+            </svg>
+          </label>
+          
+        </div>
+        
+        
+     
+      </div>
+    <div class="text-center">
+      <button class="btn btn-outline-primary col-2 mb-3" (click)="applyFilter()">Search</button>
+    </div>
+    </div>
+  
+   
+   <table class="custom-table">
+      <thead>
+        <tr>
+          <th>Developer Name</th>
+          <th>Mentor Name</th>
+          <th>Rating</th>
+          <th>Description</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr class="tdclass " *ngFor="let review of filteredReviews | paginate: { itemsPerPage: itemsPerPage, currentPage: currentPage }">
+          <td>{{ review.DeveloperFirstName }} {{ review.DeveloperLastName }}</td>
+          <td>{{ review.MentorFirstName }} {{ review.MentorLastName }}</td>
+          <td>
+            <span *ngFor="let star of [].constructor(review.Rating)">&#9733;</span>
+            <span *ngFor="let empty of [].constructor(5 - review.Rating)">&#9734;</span>
+          </td>
+          <td>{{ review.Description }}</td>
+        </tr>
+      </tbody>
+    </table>
+    <div class="mt-3">
+    <pagination-controls class="text-center " (pageChange)="currentPage = $event"></pagination-controls>
+  </div>
+  </div>
+  
+<!-- 
+
+   <div class="review-table-container">
+    <h2 class="display-4 fw-bold text-center" style="font-family: Edu AU VIC WA NT Hand, cursive;font-optical-sizing: auto;font-style: normal;">Reviews</h2>
+    
+    <div class="filter-container row">
+        <div class="col-md-4 mb-3">
+            <input class="form-control" type="text" placeholder="Developer Name" [(ngModel)]="developerFilter" (ngModelChange)="applyFilter()" (keyup.enter)="applyFilter()" />
+        </div>
+        <div class="col-md-4 mb-3">
+            <input class="form-control" type="text" placeholder="Mentor Name" [(ngModel)]="mentorFilter" (ngModelChange)="applyFilter()" (keyup.enter)="applyFilter()" />
+        </div>
+        <div class="col-md-4 mb-3 rate-filter star-rating">
+            <div class="d-flex justify-content-around">
+                <label *ngFor="let star of [5,4,3,2,1]" class="star-rating-label">
+                    <input type="radio" name="rate" [value]="star" [(ngModel)]="ratingFilter" (change)="applyFilter()" (keyup.enter)="applyFilter()" />
+                    <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="white" class="bi bi-star-fill" viewBox="0 0 16 16">
+                        <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+                    </svg>
+                </label>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12 text-center">
+            <button class="btn btn-outline-primary" (click)="applyFilter()">Search</button>
+        </div>
+    </div>
+
+    <table class="custom-table mt-3">
+        <thead>
+            <tr>
+                <th>Developer Name</th>
+                <th>Mentor Name</th>
+                <th>Rating</th>
+                <th>Description</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let review of filteredReviews">
+                <td>{{ review.DeveloperFirstName }} {{ review.DeveloperLastName }}</td>
+                <td>{{ review.MentorFirstName }} {{ review.MentorLastName }}</td>
+                <td>
+                    <span *ngFor="let star of [].constructor(review.Rating)">&#9733;</span>
+                    <span *ngFor="let empty of [].constructor(5 - review.Rating)">&#9734;</span>
+                </td>
+                <td>{{ review.Description }}</td>
+            </tr>
+        </tbody>
+    </table>
+</div> -->
