--- a/src/app/modules/admin/users-data/users-data.component.html
+++ b/src/app/modules/admin/users-data/users-data.component.html
@@ -108,7 +108,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr *ngFor="let user of filteredUsers">
+            <tr *ngFor="let user of filteredUsers | paginate: { itemsPerPage: itemsPerPage, currentPage: currentPage }">
               <td>{{ user.Id }}</td>
               <td>{{ user.FirstName }} {{ user.LastName }}</td>
               <td>{{ user.Email }}</td>
@@ -118,6 +118,9 @@
             </tr>
           </tbody>
         </table>
+        <div class="mt-3">
+          <pagination-controls class="text-center " (pageChange)="currentPage = $event"></pagination-controls>
+        </div>
       </div>
     </div>
   </div>
