--- a/src/app/shared/components/error-page/error-page.component.html
+++ b/src/app/shared/components/error-page/error-page.component.html
@@ -1,8 +1,6 @@
 <div class="error-container">
-  <div class="error-content">
-    <h1>500</h1>
-    <h2>Internal Server Error</h2>
-    <p>Oops! Something went wrong on our end. Please try again later.</p>
-    <button (click)="goBack()">Go Back</button>
-  </div>
+  <h1>500</h1>
+  <p>Oops! Something went wrong on our server.</p>
+  <p>Please try again later or contact support.</p>
+  <a routerLink="/">Go Back Home</a>
 </div>
