--- a/src/app/modules/admin/users-data/users-data.component.html
+++ b/src/app/modules/admin/users-data/users-data.component.html
@@ -5,7 +5,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&display=swap" rel="stylesheet">
 
 
-<div class="content">
+<div class="content pt-5">
     <div class="container">
       <h3 class="display-4 fw-bold text-center" style="font-family: Edu AU VIC WA NT Hand, cursive;font-optical-sizing: auto;font-style: normal;">
         User Data
