--- a/src/app/shared/components/navbar/navbar.component.css
+++ b/src/app/shared/components/navbar/navbar.component.css
@@ -14,6 +14,7 @@ nav {
 .nav-link, .active, .navbar-brand {
   color: #415bcf !important;
   font-weight: bold;
+  text-decoration: none;
 }
 .nav-link:hover{
   text-decoration: underline;
