--- a/src/app/modules/admin/contacts/contacts.component.css
+++ b/src/app/modules/admin/contacts/contacts.component.css
@@ -83,3 +83,9 @@
     margin-right: 7px;
   }
   
+.search-input {
+  padding: 0.5rem;
+  width: 200px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+}
