--- a/src/app/modules/admin/quizzes-created/quizzes-created.component.html
+++ b/src/app/modules/admin/quizzes-created/quizzes-created.component.html
@@ -1,4 +1,4 @@
-<app-adminsidebar></app-adminsidebar>
+<!-- <app-adminsidebar></app-adminsidebar>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&display=swap" rel="stylesheet">
@@ -11,7 +11,7 @@
   </h3>
   <br>
   <br>
-  <!-- Search Box -->
+  
   <div class="search-bar">
     <input type="text" [(ngModel)]="searchTerm" placeholder="Search by Skill Name" class="search-input" />
     <button (click)="onSearch()" class="search-button">Search</button>
@@ -36,4 +36,46 @@
       </tr>
     </tbody>
   </table>
+</div> -->
+<app-adminsidebar></app-adminsidebar>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&display=swap" rel="stylesheet">
+<br>
+<br>
+<div class="quiz-list">
+  <h3 class="display-4 fw-bold text-center"
+      style="font-family: Edu AU VIC WA NT Hand, cursive; font-optical-sizing: auto; font-style: normal;">
+    Quizzes Created
+  </h3>
+  <br><br>
+
+  <!-- Search Box -->
+  <div class="search-bar">
+    <input type="text" [(ngModel)]="searchTerm" (ngModelChange)="applyFilter()"
+           placeholder="Search by Skill Name" class="search-input" />
+  </div>
+  <br><br>
+
+  <table>
+    <thead>
+      <tr>
+        <th>Quiz Name</th>
+        <th>Number of Questions</th>
+        <th>Duration (min)</th>
+        <th>Skill Name</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let quiz of filteredQuizzes | paginate: { itemsPerPage: 5, currentPage: currentPage }">
+        <td>{{ quiz.QuizName }}</td>
+        <td>{{ quiz.NumberOfQuestions }}</td>
+        <td>{{ quiz.Duration }}</td>
+        <td>{{ quiz.SkillName }}</td>
+      </tr>
+    </tbody>
+  </table>
+  <div class="mt-3">
+    <pagination-controls class="text-center " (pageChange)="currentPage = $event"></pagination-controls>
+  </div>
 </div>
