--- a/src/app/modules/developer/Components/developer-profile/developer-profile.component.html
+++ b/src/app/modules/developer/Components/developer-profile/developer-profile.component.html
@@ -1,5 +1,6 @@
 <main>
   <!--hero section-->
+  
   <section class="py-xl-8 py-6">
     <div class="container">
       <!--row-->
@@ -81,6 +82,31 @@
                             </div>
                           </div>
                         </div>
+                        <div class="d-flex flex-column gap-3">
+
+                          <h5 class="mb-0 mt-3">Badges</h5>
+                          <div class="badge-container">
+                            <div *ngFor="let badge of Badges" class="badge-hexagon">
+                              <div class="hexagon-content">
+                                <img [src]="badge.BadgeImage" alt="{{ badge.BadgeType }} badge" class="badge-image" />
+                                <h6 style="font-weight: 500; font-size: 18px;">{{ badge.BadgeType }}</h6>
+                             
+                                <div class="stars ">
+                                  <span *ngFor="let star of getStars(badge.Level)" > <span>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="currentColor"
+                              class="bi bi-star-fill text-warning align-baseline" viewBox="0 0 16 16">
+                              <path
+                                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z">
+                              </path>
+                            </svg>
+                          </span></span>
+                                </div>
+                        
+                              </div>
+                            </div>
+                          </div>
+                        </div>  
+
                       </div>
 
                     </div>
@@ -158,7 +184,7 @@
                             </a>
                           </div>
                         </div>
-
+                       
                         <div class="d-flex flex-column gap-3">
 
                           <h5 class="mb-0 mt-3">Skills</h5>
@@ -172,6 +198,40 @@
                             </div>
                           </div>
                         </div>
+
+                        <div class="d-flex flex-column gap-3">
+
+                          <h5 class="mb-0 mt-3">Badges</h5>
+                          <div class="badge-container">
+                            <div *ngFor="let badge of Badges" class="badge-hexagon">
+                              <div class="hexagon-content">
+                                <img [src]="badge.BadgeImage" alt="{{ badge.BadgeType }} badge" class="badge-image" />
+                                <h6 style="font-weight: 500; font-size: 18px;">{{ badge.BadgeType }}</h6>
+                             
+                                <div class="stars ">
+                                  <span *ngFor="let star of getStars(badge.Level)" class="star">★</span>
+                                </div>
+                        
+                              </div>
+                            </div>
+                          </div>
+                        </div>  
+
+
+                        <!-- <div class="d-flex flex-column gap-3">
+
+                          <h5 class="mb-0 mt-3">Badges</h5>
+
+                          <div class="gap-2 d-flex flex-wrap">
+
+                            <div class="developer-skills col-12 mb-0 mt-3" >
+                              <div *ngFor="let badge of Badges" >
+                                {{ badge.BadgeType }}
+                              </div>
+                            </div>
+                          </div>
+                        </div> -->
+                        
                       </div>
 
                     </div>
