--- a/src/app/modules/mentor/Components/profile/profile.component.css
+++ b/src/app/modules/mentor/Components/profile/profile.component.css
@@ -282,3 +282,82 @@ columns: rgb(30, 41, 59);
 
 font-style:normal;
 }
+
+.badge-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 120px;
+  padding: 15px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  text-align: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.badge-image {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  margin-bottom: 10px;
+}
+
+.badge-type {
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.stars {
+  display: flex;
+  gap: 2px;
+  justify-content: center;
+}
+
+.star {
+  color: gold; /* Star color */
+  font-size: 18px;
+}
+.badge-container {
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
+  /* justify-content: center; */
+}
+
+.badge-hexagon {
+  width: 170px;
+  /* width: auto; */
+  height: 150px;
+  /* height: auto; */
+  background-color: #f0f0f0;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* clip-path: polygon(25% 6.7%, 75% 6.7%, 100% 50%, 75% 93.3%, 25% 93.3%, 0% 50%); */
+  clip-path: polygon(20% 5%, 80% 5%, 100% 50%, 80% 95%, 20% 95%, 0% 50%);
+
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+.hexagon-content {
+  text-align: center;
+  padding: 10px;
+}
+
+.badge-image {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin-bottom: 10px;
+}
+
+.stars {
+  color: #ffcc00; /* Gold color for stars */
+  font-size: 18px;
+}
+
+.star {
+  margin: 0 2px;
+}
