--- a/src/app/modules/admin/adminsidebar/adminsidebar.component.html
+++ b/src/app/modules/admin/adminsidebar/adminsidebar.component.html
@@ -75,12 +75,12 @@
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" routerLink="/admin/addskills" routerLinkActive="active">
+      <a class="nav-link" routerLink="/admin/addquiz" routerLinkActive="active">
         <i class="bi bi-plus-circle"></i> Add Quiz
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" routerLink="/admin/addskills" routerLinkActive="active">
+      <a class="nav-link" routerLink="/admin/addquestions" routerLinkActive="active">
         <i class="bi bi-list-task"></i> Add Quiz Questions and Options
       </a>
     </li>
